--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.6.0",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.0",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server": "json-server -w db.json --port 3333",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
