--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.58.0",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
+    "swiper": "^9.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
