--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "concurrently": "^7.6.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
