--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "classnames": "^2.3.2",
     "concurrently": "^7.6.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
     "swiper": "^9.0.4",
