--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "classnames": "^2.3.2",
     "concurrently": "^7.6.0",
     "json-server": "^0.17.1",
+    "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
-    "react-whatsapp": "^0.3.0",
     "react-yandex-map": "^4.6.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
