--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^7.6.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
