--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.2",
     "concurrently": "^7.6.0",
+    "firebase": "^9.17.2",
     "json-server": "^0.17.1",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
