--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "userServer": "json-server -w userstore.json --port 4444",
+    "useDostavka": "json-server -w dostavka.json --port 7777",
     "server": "json-server -w db.json --port 3333",
     "dev": "concurrently \"npm run start\" \"npm run server\"",
     "start": "react-scripts start",
