--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "react-yandex-map": "^4.6.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
