--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,8 +20,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-burger-menu": "^3.0.9",
+    "react-credit-cards-2": "^0.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
